--- a/src/styles/utilities/margins.pcss
+++ b/src/styles/utilities/margins.pcss
@@ -8,7 +8,11 @@
 
 .mg-md {
   margin-top: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+}
+
+.mg-md.mg-close {
+  margin-bottom: 10px;
 }
 
 .mg-lg {
